add: sync endpoint
